# Temperature-Controller-Module

./: .gitignore  Github Repository.url  README.md
Proteus-Design/: Temperature-Controller-Module.pdsprj
Temperature-Controller-Module/: CMakeLists.txt  Temperature-Controller-Module.atsln  Temperature-Controller-Module.componentinfo.xml  Temperature-Controller-Module.cproj  main.c
Temperature-Controller-Module/Debug/: Temperature-Controller-Module.hex
Temperature-Controller-Module/Drivers/: ADC.c  ADC.h  ADC_driver.c  ADC_driver.h  Button.h  DIO.c  DIO.h  Keypad.c  Keypad.h  LCD.c  LCD.h  LED.c  LED.h  PWM.c  PWM.h  Potentiometer.c  Potentiometer.h  SPI.c  SPI.h  SPI_driver.c  SPI_driver.h  Seven_Segment.c  Seven_Segment.h  TC72.c  TC72.h  Timer.c  Timer.h  keypad_driver.c  keypad_driver.h
Temperature-Controller-Module/Managers/: DSP_Manager.c  DSP_Manager.h  Heater_Control.c  Heater_Control.h  Mode_Config.c  Mode_Config.h  Schedular.c  Schedular.h  TMP_Manager.c  TMP_Manager.h
Temperature-Controller-Module/libs/: ADC.c  ADC.h  ADC_driver.c  Button.c  DIO.c  LCD.c  LCD.h  LCD_config.h  LED.c  Seven_Segment_BCD.c  Seven_Segment_BCD.h  Seven_Segment_BCD_ETA32.c  Seven_Segment_BCD_ETA32.h  keypad_driver.c  std_macros.h
